# suffiks-ingress

./: .earthignore  .gitignore  .gitmodules  Cargo.toml  Earthfile  README.rst  build.rs  suffiks-ingress.yaml
.github/: dependabot.yml
.github/workflows/: main.yml
deploy/: application.yaml.j2  deployment.yaml.j2  extension.yaml  service.yaml
hack/: ingress.json  sync  sync_request.json  test-service.yaml
src/: crd.rs  ingress.rs  logging.rs  main.rs  server.rs
