[package]
name = "suffiks-ingress"
version = "0.1.0"
edition = "2021"
default-run = "suffiks-ingress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
atty = "0.2.14"
env_logger = "0.11.3"
fast32 = "1.0.2"
figment = { version = "0.10.18", features = ["env", "yaml"] }
futures-core = "0.3.30"
hyper-rustls = "0.27.1"
k8s-openapi = { version = "0.21.1", features = ["v1_26", "schemars"] }
kube = { version = "0.88.1", default-features = false, features = ["derive", "rustls-tls", "client", "config", "kube-derive"] }
log = "0.4.21"
md-5 = "0.10.6"
prost = "0.12.4"
schemars = "0.8.16"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = { version = "0.11.0", features = ["tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }

[[bin]]
    name = "crd"
    path = "src/crd.rs"

[build-dependencies]
tonic-build = "0.11.0"

