[package]
name = "suffiks-ingress"
version = "0.1.0"
edition = "2021"
default-run = "suffiks-ingress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
env_logger = "0.11.3"
fast32 = "1.0.2"
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures-core = "0.3.30"
hyper-rustls = "0.27.2"
k8s-openapi = { version = "0.21.1", features = ["v1_26", "schemars"] }
kube = { version = "0.88.1", default-features = false, features = ["derive", "rustls-tls", "client", "config", "kube-derive"] }
log = "0.4.22"
md-5 = "0.10.6"
prost = "0.12.6"
schemars = "0.8.21"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.15"
tonic = { version = "0.11.0", features = ["tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }

[[bin]]
    name = "crd"
    path = "src/crd.rs"

[build-dependencies]
tonic-build = "0.11.0"

