[package]
name = "suffiks-ingress"
version = "0.1.0"
edition = "2021"
default-run = "suffiks-ingress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
atty = "0.2.14"
env_logger = "0.11.5"
fast32 = "1.0.3"
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures-core = "0.3.31"
hyper-rustls = "0.27.2"
k8s-openapi = { version = "0.23.0", features = ["v1_30", "schemars"] }
kube = { version = "0.96.0", default-features = false, features = ["derive", "rustls-tls", "client", "config", "kube-derive"] }
log = "0.4.22"
md-5 = "0.10.6"
prost = "0.12.6"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = { version = "0.11.0", features = ["tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }

[[bin]]
    name = "crd"
    path = "src/crd.rs"

[build-dependencies]
tonic-build = "0.11.0"

